--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,18 @@
 = spring-boot-2-performance metrics
 
+== Starting the server
+First step is to build the project and then start the server from terminal.
+
+.Gradle build
+    ./gradlew clean build
+
+.Start the server
+    $ cd build/libs
+    $ java -Xms512m -jar <artifact.jar>
+
+Now the server shall start on port 8080 ready for serving the requests.
+
+
 == Install wrk tool for performance testing
 
 .wrk - a HTTP benchmarking tool
@@ -12,7 +25,7 @@ https://github.com/wg/wrk
 ****
 
 .Installation on Ubuntu
-To install wrk on ubuntu 16.04 system, just run the below command
+To install wrk on ubuntu 18.04 system, just run the below command
 
     sudo apt install wrk
 
@@ -38,26 +51,26 @@ So we can see that a simple ping controller gives throughput of 31000 requests p
 == Using h2load for HTTP Benchmarking
 h2load is another high performance HTTP benchmarking tool that we can use to bench mark our API.
 
-.h2load to send 100000 requests using 40 concurrency level
-    $ h2load -n100000 -c32 -m10 --h1 http://localhost:8080/api/perf
+.h2load to send 100000 requests using 50 concurrency level
+    $ h2load -n100000 -c50 --h1 http://localhost:8080/api/perf
 
 .Response
 [source, txt]
 ----
 starting benchmark...
-spawning thread #0: 32 total client(s). 100000 total requests
+spawning thread #0: 50 total client(s). 100000 total requests
 Application protocol: http/1.1
 
-finished in 1.62s, 61670.27 req/s, 5.35MB/s
+finished in 1.61s, 62089.09 req/s, 5.39MB/s
 requests: 100000 total, 100000 started, 100000 done, 100000 succeeded, 0 failed, 0 errored, 0 timeout
 status codes: 100000 2xx, 0 3xx, 0 4xx, 0 5xx
 traffic: 8.68MB (9100000) total, 4.20MB (4400000) headers (space savings 0.00%), 1.91MB (2000000) data
                      min         max         mean         sd        +/- sd
-time for request:      303us     38.16ms      4.68ms      3.23ms    83.42%
-time for connect:      197us      3.18ms      1.60ms       864us    59.38%
-time to 1st byte:     3.02ms     28.45ms     10.76ms      5.65ms    78.13%
-req/s           :    1929.11     2451.89     2142.68      163.55    62.50%
+time for request:      114us     11.88ms       801us       213us    98.82%
+time for connect:      204us      3.11ms      1.64ms       817us    58.00%
+time to 1st byte:     3.17ms      8.25ms      5.35ms      1.34ms    58.00%
+req/s           :    1242.20     1248.13     1244.66        1.22    70.00%
 
 ----
 
-We can see that with latest version of Spring Boot 2.1.4, we can get a throughput of `60K requests/second` on the same Ubuntu 18.04.2 server.
+We can see that with latest version of Spring Boot 2.2.0, we can get a throughput of `62K requests/second` on the same Ubuntu 18.04.2 server.
